# OpenGL

./: .gitignore  CMakeLists.txt  README.md
bak/: shader.cpp  shader.hpp  test
bak/Shader/: vertexShader.vert
src/: actor.cpp  actor.hpp  app.cpp  app.hpp  component.cpp  component.hpp  logger.hpp  main.cpp  mesh.cpp  mesh.hpp  pathTracing_test.cpp  renderer.hpp  window.cpp  window.hpp  world.cpp
src/Shader/: framentShader.frag  vertexShader.vert
src/component/: component.cpp  component.hpp
src/core/: actor.hpp  app.cpp  app.hpp  component.cpp  component.hpp  editor.cpp  editor.hpp  input.cpp  input.hpp  logger.hpp  renderer.cpp  renderer.hpp  time.hpp  window.cpp  window.hpp  world.hpp
src/renderer/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/resource/: fileDialog.cpp  fileDialog.hpp  resource.cpp  resource.hpp
src/scene/: actor.cpp  actor.hpp  world.cpp  world.hpp
src/shader/: grid.frag  grid.vert  standard.frag  standard.vert
src/system/: folder.hpp
